animation plus extra space fixed

--- a/firstpage.css
+++ b/firstpage.css
@@ -1,3 +1,5 @@
+
+
 html {
   scroll-behavior: smooth;
 }
@@ -27,6 +29,7 @@ body {
   font-family: roboto;
   padding-bottom: 5000px;
   
+  
 }
 
 .header {
@@ -40,6 +43,7 @@ body {
   padding-left: 10px;
   position: fixed;
   z-index: 100;
+  
 }
 
 .RussRicci, .home, .about-me {
@@ -95,10 +99,12 @@ body {
   z-index: 1;
   justify-content: center;
   font-size: 30px;
-  padding-left: 40px;
-  padding-right: 40px;
+  
+  
   align-items: center;
   flex-direction: column;
   color: #f4fefd;
+
 }
+
 
